--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "dependencies": {
     "app-root-path": "^3.0.0",
     "dotenv": "^10.0.0",
+    "dotenv-defaults": "^2.0.2",
+    "dotenv-parse-variables": "^2.0.0",
+    "node-logger": "github:one1erp/node-logger",
     "uuid": "^8.3.2",
     "ws": "^7.4.6"
   }
