--- a/package.json
+++ b/package.json
@@ -7,5 +7,24 @@
     "node-logger": "github:one1erp/node-logger",
     "uuid": "^8.3.2",
     "ws": "^7.4.6"
-  }
+  },
+  "name": "octopusmb",
+  "description": "A great message broker with WebSockets under the hood",
+  "version": "1.0.0",
+  "main": "index.js",
+  "type": "module",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/one1erp/octopusMB.git"
+  },
+  "author": "Dror Vomberg",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/one1erp/octopusMB/issues"
+  },
+  "homepage": "https://github.com/one1erp/octopusMB#readme"
 }
