Chage dontenv to dotenv-defaults Change paths to forward slash Add dockerfile

--- a/.env.defaults
+++ b/.env.defaults
@@ -2,11 +2,11 @@
 NODE_ENV=development
 
 PORT=8899
-DATA_DIR=data\
+DATA_DIR=data/
 MESSAGES_PER_FILE=50000
 
 #log settings
-LOG_FILE=logs\octopusMB.log
-LOG_DAYS=2
+LOG_FILE=logs/octopusMB.log
+LOG_DAYS=7
 LOG_ZIP=true
 LOG_MAX_SIZE=100m
