--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "name": "octopusmb",
   "description": "A great message broker with WebSockets under the hood",
-  "version": "1.2.1-rc.2",
+  "version": "1.2.2-rc",
   "main": "index.js",
   "type": "module",
   "devDependencies": {},
