--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dotenv-parse-variables": "^2.0.0",
     "node-logger": "github:one1erp/node-logger",
     "uuid": "^8.3.2",
-    "ws": "^7.4.6"
+    "ws": "^7.4.6",
+    "dayjs": "^1.11.10"
   },
   "name": "octopusmb",
   "description": "A great message broker with WebSockets under the hood",
